--- a/location_sharing/pubspec.yaml
+++ b/location_sharing/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   firebase_core: ^3.8.1
   firebase_messaging: ^15.1.5
   workmanager: ^0.5.2
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
