--- a/location_sharing/ios/Runner/Info.plist
+++ b/location_sharing/ios/Runner/Info.plist
@@ -73,6 +73,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
+		<string>fetch</string>
 	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
