--- a/location_sharing/pubspec.yaml
+++ b/location_sharing/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_maps_flutter: ^2.9.0
   workmanager: ^0.5.2
   timezone: ^0.9.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
